@@ -17,6 +17,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>DECLARE</POWER>
             <POWER>TAX</POWER>
@@ -36,6 +37,7 @@
             <POWER>CLAN_MOTD</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>MORGUE</POWER>
@@ -165,6 +167,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>VOTE_ASSIGN</POWER>
             <POWER>VOTE_OTHER</POWER>
             <POWER>DEPOSIT_LIST</POWER>
@@ -227,6 +230,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>MORGUE</POWER>
             <POWER>LIST_MEMBERS</POWER>
@@ -322,6 +326,7 @@
             <POWER>VOTE_ASSIGN</POWER>
             <POWER>VOTE_OTHER</POWER>
             <POWER>DEPOSIT_LIST</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>MORGUE</POWER>
             <POWER>LIST_MEMBERS</POWER>
@@ -373,6 +378,7 @@
         <POSITION ID="SHERIFF" ROLEID=2 RANK=4 NAME="SHERIFF" PLURAL="SHERIFFS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>VOTE_ASSIGN</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>CHANNEL</POWER>
@@ -475,6 +481,7 @@
             <POWER>VOTE_OTHER</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>CLAN_MOTD</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>MORGUE</POWER>
             <POWER>LIST_MEMBERS</POWER>
@@ -489,6 +496,7 @@
             <POWER>VOTE_ASSIGN</POWER>
             <POWER>VOTE_OTHER</POWER>
             <POWER>CLAN_MOTD</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>MORGUE</POWER>
@@ -529,6 +537,7 @@
         <POSITION ID="SOLDIER" ROLEID=2 RANK=4 NAME="SOLDIER" PLURAL="SOLDIERS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>VOTE_ASSIGN</POWER>
             <POWER>VOTE_OTHER</POWER>
             <POWER>DEPOSIT_LIST</POWER>
@@ -641,6 +650,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>DECLARE</POWER>
             <POWER>TAX</POWER>
@@ -660,6 +670,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>MORGUE</POWER>
@@ -702,6 +713,7 @@
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
             <POWER>DEPOSIT_LIST</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>MORGUE</POWER>
             <POWER>LIST_MEMBERS</POWER>
@@ -801,6 +813,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>DECLARE</POWER>
             <POWER>TAX</POWER>
@@ -827,6 +840,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>DECLARE</POWER>
             <POWER>TAX</POWER>
@@ -846,6 +860,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>TAX</POWER>
             <POWER>ENCHANT</POWER>
@@ -864,6 +879,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>TAX</POWER>
             <POWER>ENCHANT</POWER>
@@ -985,6 +1001,7 @@
             <POWER>WITHDRAW</POWER>
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>ENCHANT</POWER>
             <POWER>CHANNEL</POWER>
@@ -1074,6 +1091,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>CLAN_MOTD</POWER>
             <POWER>VOTE_ASSIGN</POWER>
             <POWER>VOTE_OTHER</POWER>
@@ -1277,6 +1295,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>DECLARE</POWER>
             <POWER>ENCHANT</POWER>
@@ -1302,6 +1321,7 @@
             <POWER>PROPERTY_OWNER</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>LIST_MEMBERS</POWER>
@@ -1425,6 +1445,7 @@
             <POWER>DEPOSIT</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>DECLARE</POWER>
             <POWER>ENCHANT</POWER>
@@ -1443,6 +1464,7 @@
             <POWER>PROPERTY_OWNER</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>LIST_MEMBERS</POWER>
@@ -1456,6 +1478,7 @@
             <POWER>PROPERTY_OWNER</POWER>
             <POWER>ORDER_UNDERLINGS</POWER>
             <POWER>ORDER_CONQUERED</POWER>
+            <POWER>CREATE_LAW</POWER>
             <POWER>DEPOSIT_LIST</POWER>
             <POWER>CHANNEL</POWER>
             <POWER>LIST_MEMBERS</POWER>
