@@ -4,6 +4,7 @@
   3. Crafting INFO feature will now give the approx. time to craft
   4. New common skill: Shrooming, for growing mushrooms/fungus
   5. Newly crafted Clan Journals now writeable only by clan role power (journal). INI updated.
+  6. New clan govt roles: CREATE_LAW (for law books), and JOURNAL (for writing to journals)
 
 # Build 5.9.12 Release 1/17/2022
   *. DB Changes: CMCOLR field in CMCHAR increased in size to 255 chars, CMSNAM field added to CMBKLG
